// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`single slider > handles correctly onChange with min and max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        >
          <div
            class="styles__12tz9gcw styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div>
              <div
                class="styles__1p4qkknk styles_size_small__1p4qkknn styles_state_default__1p4qkkno"
                data-controls="false"
                data-disabled="false"
                data-error="false"
                data-size="small"
                data-success="false"
                data-unit="false"
              >
                <div
                  class="styles__1p4qkkn3 styles_controls_false__1p4qkkn4 styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_justifyContent_space-between_xxsmall__78oem561"
                  style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
                >
                  <input
                    aria-label="input"
                    class="styles__1p4qkknc styles_controls_false__1p4qkknd styles_size_small__1p4qkkni styles_undefined_compound_0__1p4qkknj"
                    data-testid="slider-input"
                    id="_r_7o_"
                    inputmode="numeric"
                    max="10"
                    min="2"
                    placeholder=""
                    step="1"
                    type="number"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="slider"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            data-testid="slider"
            id="_r_7n_"
            max="10"
            min="2"
            name="slider"
            step="1"
            style="--_12tz9gc2: calc(12.5% - 2px); --_12tz9gc1: #ffffff; background-size: 12.5% 100%;"
            tabindex="0"
            type="range"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > handles correctly with custom scale 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341"
      data-options="true"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        >
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            6
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="slider"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            data-testid="slider"
            id="_r_7v_"
            max="3"
            min="0"
            name="slider"
            step="1"
            style="--_12tz9gc2: calc(66.66666666666667% - 10.666666666666668px); --_12tz9gc1: #ffffff; background-size: 66.66666666666667% 100%;"
            tabindex="0"
            type="range"
            value="2"
          />
          <datalist
            class="styles__12tz9gc6"
            data-double="false"
          >
            <span
              class="styles__12tz9gc8 styles_left_true__12tz9gc9"
              data-element-left="true"
              data-element-right="false"
              data-value="0"
              style="--_12tz9gc3: calc(0% - 0px + 8px);"
            >
              <p
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                3
              </p>
            </span>
            <span
              class="styles__12tz9gc8"
              data-element-left="false"
              data-element-right="false"
              data-value="1"
              style="--_12tz9gc3: calc(33.333333333333336% - 5.333333333333334px + 8px);"
            >
              <p
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                5
              </p>
            </span>
            <span
              class="styles__12tz9gc8"
              data-element-left="false"
              data-element-right="false"
              data-value="2"
              style="--_12tz9gc3: calc(66.66666666666667% - 10.666666666666668px + 8px);"
            >
              <p
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_captionStrong__1yhcak8t style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
              >
                6
              </p>
            </span>
            <span
              class="styles__12tz9gc8 styles_right_true__12tz9gca"
              data-element-left="false"
              data-element-right="true"
              data-value="3"
              style="--_12tz9gc3: calc(100% - 16px + 8px);"
            >
              <p
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                10
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <div
            class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
          >
            <label
              class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              for="_r_1_"
            >
              Label
            </label>
            <span
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
            >
              labeldescription
            </span>
          </div>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-describedby="_r_0_"
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_1_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_0_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_4n_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <div
            class="styles__1u0cyic5"
          >
            <input
              aria-label="Name"
              class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
              data-direction="column"
              data-error="false"
              id="_r_4n_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom value - direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_5j_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <div
            class="styles__1u0cyic5"
          >
            <input
              aria-label="Name"
              class="styles__12tz9gcl styles_direction_row__12tz9gcn styles__12tz9gcb styles_disabled_false__12tz9gcc"
              data-direction="row"
              data-error="false"
              id="_r_5j_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
        custom value
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_57_"
          >
            Label
          </label>
          custom value
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <div
            class="styles__1u0cyic5"
          >
            <input
              aria-label="Name"
              class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
              data-direction="column"
              data-error="false"
              id="_r_57_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom value false 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_5d_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <div
            class="styles__1u0cyic5"
          >
            <input
              aria-label="Name"
              class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
              data-direction="column"
              data-error="false"
              id="_r_5d_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom value with input  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_5p_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <div
            class="styles__1u0cyic5"
          >
            <input
              aria-label="Name"
              class="styles__12tz9gcl styles_direction_row__12tz9gcn styles__12tz9gcb styles_disabled_false__12tz9gcc"
              data-direction="row"
              data-error="false"
              id="_r_5p_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
        <div
          class="styles__12tz9gcw styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
        >
          <div>
            <div
              class="styles__1p4qkknk styles_size_small__1p4qkknn styles_state_default__1p4qkkno"
              data-controls="false"
              data-disabled="false"
              data-error="false"
              data-size="small"
              data-success="false"
              data-unit="false"
            >
              <div
                class="styles__1p4qkkn3 styles_controls_false__1p4qkkn4 styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_justifyContent_space-between_xxsmall__78oem561"
                style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
              >
                <input
                  aria-label="input"
                  class="styles__1p4qkknc styles_controls_false__1p4qkknd styles_size_small__1p4qkkni styles_undefined_compound_0__1p4qkknj"
                  data-testid="slider-input"
                  id="_r_5u_"
                  inputmode="numeric"
                  max="100"
                  min="0"
                  placeholder=""
                  step="1"
                  type="number"
                  value="1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly default tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_4v_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <div
            class="styles__1u0cyic5"
          >
            <input
              aria-label="Name"
              class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
              data-direction="column"
              data-error="false"
              id="_r_4v_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_1r_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_row__12tz9gcn styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="row"
            data-error="false"
            id="_r_1r_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
        <span
          class="styles__12tz9gce styles_isDouble_true__12tz9gcg style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          data-testid="slider-value"
          style="--textAlign__1eu8od80: center;"
        >
          1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly direction row with input 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_23_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_row__12tz9gcn styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="row"
            data-error="false"
            id="_r_23_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
        <div
          class="styles__12tz9gcw styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
        >
          <div>
            <div
              class="styles__1p4qkknk styles_size_small__1p4qkknn styles_state_default__1p4qkkno"
              data-controls="false"
              data-disabled="false"
              data-error="false"
              data-size="small"
              data-success="false"
              data-unit="false"
            >
              <div
                class="styles__1p4qkkn3 styles_controls_false__1p4qkkn4 styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_justifyContent_space-between_xxsmall__78oem561"
                style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
              >
                <input
                  aria-label="input"
                  class="styles__1p4qkknc styles_controls_false__1p4qkknd styles_size_small__1p4qkkni styles_undefined_compound_0__1p4qkknj"
                  data-testid="slider-input"
                  id="_r_28_"
                  inputmode="numeric"
                  max="100"
                  min="0"
                  placeholder=""
                  step="1"
                  type="number"
                  value="1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_2t_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-disabled="true"
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles_disabled_true__12tz9gcp styles__12tz9gcb styles_disabled_true__12tz9gcd"
            data-direction="column"
            data-error="false"
            disabled=""
            id="_r_2t_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_35_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-describedby="_r_34_"
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles_error_true__12tz9gcq styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="true"
            id="_r_35_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_34_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error boolean and helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_3f_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-describedby="_r_3e_"
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles_error_true__12tz9gcq styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="true"
            id="_r_3f_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_3e_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_3p_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-describedby="_r_3o_"
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles_error_true__12tz9gcq styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="true"
            id="_r_3p_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_3o_"
        role="status"
      >
        error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error string and helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_43_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-describedby="_r_42_"
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles_error_true__12tz9gcq styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="true"
            id="_r_43_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_42_"
        role="status"
      >
        error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly input 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_4d_"
          >
            Label
          </label>
          <div
            class="styles__12tz9gcw styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div>
              <div
                class="styles__1p4qkknk styles_size_small__1p4qkknn styles_state_default__1p4qkkno"
                data-controls="false"
                data-disabled="false"
                data-error="false"
                data-size="small"
                data-success="false"
                data-unit="false"
              >
                <div
                  class="styles__1p4qkkn3 styles_controls_false__1p4qkkn4 styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_justifyContent_space-between_xxsmall__78oem561"
                  style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
                >
                  <input
                    aria-label="input"
                    class="styles__1p4qkknc styles_controls_false__1p4qkknd styles_size_small__1p4qkkni styles_undefined_compound_0__1p4qkknj"
                    data-testid="slider-input"
                    id="_r_4g_"
                    inputmode="numeric"
                    max="100"
                    min="0"
                    placeholder=""
                    step="1"
                    type="number"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_4d_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly min max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_77_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_77_"
            max="10"
            min="1"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(0% - 0px); --_12tz9gc1: #ffffff; background-size: 0% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly prefix 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_1j_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            %1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_1j_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <div
            class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <label
              class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              for="_r_d_"
            >
              Label
            </label>
            <span
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
            >
              *
            </span>
          </div>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_d_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly step 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_7f_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_7f_"
            max="100"
            min="0"
            name="Name"
            step="0.5"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly suffix complex 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_v_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1
            <button
              type="button"
            >
              suffix
            </button>
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_v_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly suffix string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_n_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            1%
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_n_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly suffix string input 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_17_"
          >
            Label
          </label>
          <div
            class="styles__12tz9gcw styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div>
              <div
                class="styles__1p4qkknk styles_size_small__1p4qkknn styles_state_default__1p4qkkno"
                data-controls="false"
                data-disabled="false"
                data-error="false"
                data-size="small"
                data-success="false"
                data-unit="true"
              >
                <div
                  class="styles__1p4qkkn3 styles_controls_false__1p4qkkn4 styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_justifyContent_space-between_xxsmall__78oem561"
                  style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
                >
                  <input
                    aria-label="input"
                    class="styles__1p4qkknc styles_controls_false__1p4qkknd styles_hasUnit_true__1p4qkknf styles_size_small__1p4qkkni"
                    data-testid="slider-input"
                    id="_r_1a_"
                    inputmode="numeric"
                    max="100"
                    min="0"
                    placeholder=""
                    step="1"
                    type="number"
                    value="1"
                  />
                  <span
                    class="styles__1p4qkkn5 styles_size_small__1p4qkkna styles_controls_false__1p4qkknb style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    %
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_17_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with custom ticks 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341"
      data-options="true"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_63_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            30%
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_63_"
            max="1"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(100% - 16px); --_12tz9gc1: #ffffff; background-size: 100% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
          <datalist
            class="styles__12tz9gc6"
            data-double="false"
          >
            <span
              class="styles__12tz9gc8 styles_left_true__12tz9gc9"
              data-element-left="true"
              data-element-right="false"
              data-value="0"
              style="--_12tz9gc3: calc(0% - 0px + 8px);"
            >
              <p
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                1 Mb
              </p>
            </span>
            <span
              class="styles__12tz9gc8 styles_right_true__12tz9gca"
              data-element-left="false"
              data-element-right="true"
              data-value="1"
              style="--_12tz9gc3: calc(100% - 16px + 8px);"
            >
              <p
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_captionStrong__1yhcak8t style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
              >
                30MB
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with custom ticks and default scale 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341"
      data-options="true"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_6f_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            30%
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_6f_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(1% - 0.16px); --_12tz9gc1: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
          <datalist
            class="styles__12tz9gc6"
            data-double="false"
          >
            <span
              class="styles__12tz9gc8 styles_left_true__12tz9gc9"
              data-element-left="true"
              data-element-right="false"
              data-value="1"
              style="--_12tz9gc3: calc(1% - 0.16px + 8px);"
            >
              <p
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_captionStrong__1yhcak8t style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
              >
                1 Mb
              </p>
            </span>
            <span
              class="styles__12tz9gc8"
              data-element-left="false"
              data-element-right="true"
              data-value="30"
              style="--_12tz9gc3: calc(30% - 4.8px + 8px);"
            >
              <p
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                30MB
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with default ticks without label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341"
      data-options="true"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_6r_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            30%
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_6r_"
            max="1"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(100% - 16px); --_12tz9gc1: #ffffff; background-size: 100% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
          <datalist
            class="styles__12tz9gc6"
            data-double="false"
          >
            <span
              class="styles__12tz9gc8 styles_left_true__12tz9gc9"
              data-element-left="true"
              data-element-right="false"
              data-value="0"
              style="--_12tz9gc3: calc(0% - 0px + 8px);"
            >
              <p
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                0
              </p>
            </span>
            <span
              class="styles__12tz9gc8 styles_right_true__12tz9gca"
              data-element-left="false"
              data-element-right="true"
              data-value="1"
              style="--_12tz9gc3: calc(100% - 16px + 8px);"
            >
              <p
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_captionStrong__1yhcak8t style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
              >
                1
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with value < min 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_2d_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            10
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_2d_"
            max="100"
            min="10"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(0% - 0px); --_12tz9gc1: #ffffff; background-size: 0% 100%;"
            tabindex="0"
            type="range"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with value > max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      data-options="false"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_left_xxsmall__mxir936v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_2l_"
          >
            Label
          </label>
          <span
            class="styles__12tz9gce styles_isDouble_false__12tz9gcf styles_isPadded_true__12tz9gch style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            data-testid="slider-value"
            style="--textAlign__1eu8od80: right;"
          >
            10
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p styles_justifyContent_center_xxsmall__mxir9361"
          style="--_1o893js0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__12tz9gcl styles_direction_column__12tz9gcm styles__12tz9gcb styles_disabled_false__12tz9gcc"
            data-direction="column"
            data-error="false"
            id="_r_2l_"
            max="10"
            min="0"
            name="Name"
            step="1"
            style="--_12tz9gc2: calc(100% - 16px); --_12tz9gc1: #ffffff; background-size: 100% 100%;"
            tabindex="0"
            type="range"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
